# langchain-demo

./: .env.example  .gitignore  logging.conf  main.py  pyproject.toml  shell.nix
config/: __init__.py  app.py  milvus.py  openai.py  repos.py
embed/: models.py
git/: git.py
loader/: loader.py
modules/embed/: __init__.py  models.py
modules/stores/: __init__.py  github.py
